cmake_minimum_required (VERSION 2.6)
project (RGB2H264)
set(INC_DIR /mass/workspace/264codec/local/include)  
set(LINK_DIR /mass/workspace/264codec/local/lib)  
set(DIR_SRCS /mass/workspace/264codec/sample/Encoder)
include_directories(${INC_DIR})
link_directories(${LINK_DIR})
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
add_executable(RGB2H264 ${DIR_SRCS})
TARGET_LINK_LIBRARIES(RGB2H264 x264 avcodec avdevice avutil swscale)
